History: UI: Toolbar button sizes Fixes windows part of http://bugs.activestate.com/show_bug.cgi?id=81746 "History nav buttons too large" r=trentm
(integrated from komodo (trunk) change 26130 by ericp)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@2893 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/win/platform.css
+++ b/src/chrome/komodo/skin/plat/win/platform.css
@@ -59,46 +59,10 @@ textbox[type="autocomplete"][disabled="true"] > hbox {
 
 
 
-
 /*---- history toolbar items
- * Based on FF back/forward buttons,
+ * Parts are based on FF back/forward buttons,
  * http://mxr.mozilla.org/firefox/source/browser/themes/winstripe/browser/browser.css#390
  */
-
-/* unified back button with keyhole icons, small icons mode */
-
-toolbar #historyBackButton {
-  list-style-image : url("chrome://komodo/skin/images/historyToolbar.png");
-  -moz-image-region: rect(0px 264px 24px 240px);
-  padding-left: 0;
-  padding-right: 0;
-}
-toolbar #historyBackButton:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px 264px 48px 240px);
-}
-toolbar #historyBackButton[disabled="true"] {
-  -moz-image-region: rect(48px 264px 72px 240px);
-}
-toolbar #historyBackButton:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(72px 264px 96px 240px);
-}
-/* unified forward button with keyhole icons, small icons mode */
-
-toolbar #historyForwardButton {
-  list-style-image : url("chrome://komodo/skin/images/historyToolbar.png");
-  -moz-image-region: rect(0px 288px 24px 264px);
-  padding-left: 0;
-  padding-right: 0;
-}
-toolbar #historyForwardButton:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px 288px 48px 264px);
-}
-toolbar #historyForwardButton[disabled="true"] {
-  -moz-image-region: rect(48px 288px 72px 264px);
-}
-toolbar #historyForwardButton:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(72px 288px 96px 264px);
-}
 
 toolbar #historyRecentLocations {
   /* Image from Firefox:
